# ipddp_cpp

./: .gitignore  CMakeLists.txt  README.md  helper_function.h  main.cpp  soc_ipddp.h
alipddp/: param.h  quat_model_base.h
alipddp/alipddp/: alipddp.cpp  alipddp.h  alipddp.tpp
alipddp/helper_functions/: no_helper.h  soc_helper.h  unit_quaternion_helper.h
alipddp/test/example/model/: drone3d.h  rocket3d.h  rocket3d_scvx.h  rpo.h
alipddp/utilities/: table.h
bindings/: CMakeLists.txt  point_mass_3d.py  test.py
bindings/include/function/: bind_function.h
bindings/include/function/override/: py_dynamics.h  py_stage_constraint.h  py_stage_cost.h  py_terminal_constraint.h  py_terminal_cost.h
bindings/include/problem/: bind_problem.h
bindings/include/solver/: bind_alipddp.h  bind_param.h
bindings/src/: bind.cpp
bindings/src/function/: bind_function.cpp
bindings/src/problem/: bind_problem.cpp
bindings/src/solver/: bind_alipddp.cpp  bind_param.cpp
bindings/tests/: point_mass_3d.py
example/: crazyflie.cpp  drone3d.cpp  drone3d_obstacle.cpp  main.cpp  point3d.cpp  rocket2d.cpp  rocket2d_teq.cpp  rocket3d.cpp  rocket3d_move.cpp  rocket3d_stable.cpp  rpo.cpp  test.cpp
example/model/: car_parking.h  cart_pole.h  crazyflie.h  crazyflie2.h  drone3d.h  drone3d_obstacle.h  invpend.h  model_base.h  point3d.h  point_mass_3d.h  rocket.h  rocket2d.h  rocket2d_eq_st.h  rocket2d_teq.h  rocket3d.h  rocket3d_flip.h  rocket3d_move.h  rocket3d_rss.h  rocket3d_scale.h  rocket3d_stable.h  rpo.h
ipddp/: automatic_differentiator.h  cost_function.h  discrete_dynamics.h  discrete_dynamics_base.h  helper_function.h  ipddp.h  ipddp_partial_forward.h  model_base.h  param.h  problem_parser.h  quat_model_base.h  test_partial_forward.h  types.h  visualize.h
ipddp/helper_functions/: soc_helper.h
ipddp/test/: helper_function.h  test_partial_forward.h
model/: car_parking.h  cart_pole.h  inv_pend.h  invpend.h  model_base.h
problem_examples/: minwork_double_integrator.cpp  point_mass_3d_basic.cpp  point_mass_3d_simple.cpp  rocket_2d.cpp  rocket_3d.cpp  rocket_3d_scaled.cpp
problem_examples/point_mass_3d/: main.cpp  point_mass_3d_basic.cpp
problem_maker/: discrete_dynamics.h  discrete_dynamics_base.h  optimal_control_problem.h  stage_constraint_function.h  stage_cost_function.h  terminal_constraint_function.h  terminal_cost_function.h  types.h
problem_maker/constraint/: linear_stage_constraint.h  linear_terminal_constraint.h  stage_constraint_base.h  terminal_constraint_base.h
problem_maker/cost/: error_quadratic_terminal_cost.h  quadratic_stage_cost.h  quadratic_terminal_cost.h  scalar_quadratic_stage_cost.h  scalar_quadratic_terminal_cost.h  stage_cost_base.h  terminal_cost_base.h  vector_stage_cost.h
problem_maker/dynamics/: linear_discrete_dynamics.h
results/: drone3d.txt  ipddp.txt  rocket2d.txt  rocket3d.txt
soc_ipddp/: helper_function.h  param.h  soc_ipddp.h  visualize.h
src/: main.cpp
visual/: visual_2d.py  visual_2d_to_3d.py  visual_3d.py
